// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Joyride > Controlled > should have rendered STEP 2 Tooltip 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="right"
  data-popper-reference-hidden=""
  id="react-joyride-step-1"
  style="z-index: 10100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(20px, 0px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 10100; padding: 0px 0px 0px 16px;"
  >
    <div
      class="__floater__body"
    >
      <div
        aria-label="Sidebar"
        aria-modal="true"
        class="react-joyride__tooltip"
        role="alertdialog"
        style="background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; padding: 15px; position: relative; width: 380px;"
      >
        <div
          style="line-height: 1.4; text-align: center;"
        >
          <h1
            aria-label="Sidebar"
            style="font-size: 18px; margin: 0px;"
          >
            Sidebar
          </h1>
          <div
            style="padding: 20px 10px;"
          >
            This is our sidebar, you can find everything you need here
          </div>
        </div>
        <div
          style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <button
              aria-label="Skip"
              aria-live="off"
              data-action="skip"
              data-test-id="button-skip"
              role="button"
              style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(51, 51, 51); cursor: pointer; font-size: 14px; line-height: 1; padding: 8px;"
              title="Skip"
              type="button"
            >
              Skip
            </button>
          </div>
          <button
            aria-label="Back"
            data-action="back"
            data-test-id="button-back"
            role="button"
            style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(255, 0, 68); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px; margin-left: auto; margin-right: 5px;"
            title="Back"
            type="button"
          >
            Back
          </button>
          <button
            aria-label="Next (Step 2 of 6)"
            data-action="primary"
            data-test-id="button-primary"
            role="button"
            style="background-color: rgb(255, 0, 68); border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px;"
            title="Next (Step 2 of 6)"
            type="button"
          >
            Next (Step 2 of 6)
          </button>
        </div>
        <button
          aria-label="Close"
          data-action="close"
          data-test-id="button-close"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0; cursor: pointer; font-size: 16px; line-height: 1; padding: 15px; position: absolute; right: 0px; top: 0px;"
          title="Close"
          type="button"
        >
          <svg
            height="14px"
            preserveAspectRatio="xMidYMid"
            version="1.1"
            viewBox="0 0 18 18"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
                fill="#333"
              />
            </g>
          </svg>
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; top: 0px; transform: translate(0px, 8px); left: 0px;"
      >
        <svg
          height="32"
          version="1.1"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="16,32 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Joyride > Controlled > should have rendered STEP 3 Tooltip 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="react-joyride-step-2"
  style="z-index: 10100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 20px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 10100; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        aria-label="The schedule"
        aria-modal="true"
        class="react-joyride__tooltip"
        role="alertdialog"
        style="background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; padding: 15px; position: relative; width: 380px;"
      >
        <div
          style="line-height: 1.4; text-align: center;"
        >
          <h1
            aria-label="The schedule"
            style="font-size: 18px; margin: 0px;"
          >
            The schedule
          </h1>
          <div
            style="padding: 20px 10px;"
          >
            Check the availability of the team!
          </div>
        </div>
        <div
          style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <button
              aria-label="Skip"
              aria-live="off"
              data-action="skip"
              data-test-id="button-skip"
              role="button"
              style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(51, 51, 51); cursor: pointer; font-size: 14px; line-height: 1; padding: 8px;"
              title="Skip"
              type="button"
            >
              Skip
            </button>
          </div>
          <button
            aria-label="Back"
            data-action="back"
            data-test-id="button-back"
            role="button"
            style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(255, 0, 68); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px; margin-left: auto; margin-right: 5px;"
            title="Back"
            type="button"
          >
            Back
          </button>
          <button
            aria-label="Next (Step 3 of 6)"
            data-action="primary"
            data-test-id="button-primary"
            role="button"
            style="background-color: rgb(255, 0, 68); border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px;"
            title="Next (Step 3 of 6)"
            type="button"
          >
            Next (Step 3 of 6)
          </button>
        </div>
        <button
          aria-label="Close"
          data-action="close"
          data-test-id="button-close"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0; cursor: pointer; font-size: 16px; line-height: 1; padding: 15px; position: absolute; right: 0px; top: 0px;"
          title="Close"
          type="button"
        >
          <svg
            height="14px"
            preserveAspectRatio="xMidYMid"
            version="1.1"
            viewBox="0 0 18 18"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
                fill="#333"
              />
            </g>
          </svg>
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Joyride > Controlled > should have rendered STEP 3 Tooltip AGAIN 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="react-joyride-step-2"
  style="z-index: 10100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 20px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 10100; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        aria-label="The schedule"
        aria-modal="true"
        class="react-joyride__tooltip"
        role="alertdialog"
        style="background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; padding: 15px; position: relative; width: 380px;"
      >
        <div
          style="line-height: 1.4; text-align: center;"
        >
          <h1
            aria-label="The schedule"
            style="font-size: 18px; margin: 0px;"
          >
            The schedule
          </h1>
          <div
            style="padding: 20px 10px;"
          >
            Check the availability of the team!
          </div>
        </div>
        <div
          style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <button
              aria-label="Skip"
              aria-live="off"
              data-action="skip"
              data-test-id="button-skip"
              role="button"
              style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(51, 51, 51); cursor: pointer; font-size: 14px; line-height: 1; padding: 8px;"
              title="Skip"
              type="button"
            >
              Skip
            </button>
          </div>
          <button
            aria-label="Back"
            data-action="back"
            data-test-id="button-back"
            role="button"
            style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(255, 0, 68); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px; margin-left: auto; margin-right: 5px;"
            title="Back"
            type="button"
          >
            Back
          </button>
          <button
            aria-label="Next (Step 3 of 6)"
            data-action="primary"
            data-test-id="button-primary"
            role="button"
            style="background-color: rgb(255, 0, 68); border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px;"
            title="Next (Step 3 of 6)"
            type="button"
          >
            Next (Step 3 of 6)
          </button>
        </div>
        <button
          aria-label="Close"
          data-action="close"
          data-test-id="button-close"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0; cursor: pointer; font-size: 16px; line-height: 1; padding: 15px; position: absolute; right: 0px; top: 0px;"
          title="Close"
          type="button"
        >
          <svg
            height="14px"
            preserveAspectRatio="xMidYMid"
            version="1.1"
            viewBox="0 0 18 18"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
                fill="#333"
              />
            </g>
          </svg>
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Joyride > Controlled > should have rendered STEP 4 Tooltip 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="react-joyride-step-3"
  style="z-index: 200; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 20px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 200; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        aria-label="Our Growth"
        aria-modal="true"
        class="react-joyride__tooltip"
        role="alertdialog"
        style="background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; padding: 15px; position: relative; width: 380px;"
      >
        <div
          style="line-height: 1.4; text-align: center;"
        >
          <h1
            aria-label="Our Growth"
            style="font-size: 18px; margin: 0px;"
          >
            Our Growth
          </h1>
          <div
            style="padding: 20px 10px;"
          >
            <div>
              Our rate is off the charts!
            </div>
          </div>
        </div>
        <div
          style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <button
              aria-label="Skip"
              aria-live="off"
              data-action="skip"
              data-test-id="button-skip"
              role="button"
              style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(51, 51, 51); cursor: pointer; font-size: 14px; line-height: 1; padding: 8px;"
              title="Skip"
              type="button"
            >
              Skip
            </button>
          </div>
          <button
            aria-label="Back"
            data-action="back"
            data-test-id="button-back"
            role="button"
            style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(255, 0, 68); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px; margin-left: auto; margin-right: 5px;"
            title="Back"
            type="button"
          >
            Back
          </button>
          <button
            aria-label="Next (Step 4 of 6)"
            data-action="primary"
            data-test-id="button-primary"
            role="button"
            style="background-color: rgb(255, 0, 68); border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px;"
            title="Next (Step 4 of 6)"
            type="button"
          >
            Next (Step 4 of 6)
          </button>
        </div>
        <button
          aria-label="Close"
          data-action="close"
          data-test-id="button-close"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0; cursor: pointer; font-size: 16px; line-height: 1; padding: 15px; position: absolute; right: 0px; top: 0px;"
          title="Close"
          type="button"
        >
          <svg
            height="14px"
            preserveAspectRatio="xMidYMid"
            version="1.1"
            viewBox="0 0 18 18"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
                fill="#333"
              />
            </g>
          </svg>
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Joyride > Controlled > should have rendered STEP 4 Tooltip AGAIN 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="react-joyride-step-3"
  style="z-index: 200; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 20px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 200; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        aria-label="Our Growth"
        aria-modal="true"
        class="react-joyride__tooltip"
        role="alertdialog"
        style="background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; padding: 15px; position: relative; width: 380px;"
      >
        <div
          style="line-height: 1.4; text-align: center;"
        >
          <h1
            aria-label="Our Growth"
            style="font-size: 18px; margin: 0px;"
          >
            Our Growth
          </h1>
          <div
            style="padding: 20px 10px;"
          >
            <div>
              Our rate is off the charts!
            </div>
          </div>
        </div>
        <div
          style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <button
              aria-label="Skip"
              aria-live="off"
              data-action="skip"
              data-test-id="button-skip"
              role="button"
              style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(51, 51, 51); cursor: pointer; font-size: 14px; line-height: 1; padding: 8px;"
              title="Skip"
              type="button"
            >
              Skip
            </button>
          </div>
          <button
            aria-label="Back"
            data-action="back"
            data-test-id="button-back"
            role="button"
            style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(255, 0, 68); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px; margin-left: auto; margin-right: 5px;"
            title="Back"
            type="button"
          >
            Back
          </button>
          <button
            aria-label="Next (Step 4 of 6)"
            data-action="primary"
            data-test-id="button-primary"
            role="button"
            style="background-color: rgb(255, 0, 68); border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px;"
            title="Next (Step 4 of 6)"
            type="button"
          >
            Next (Step 4 of 6)
          </button>
        </div>
        <button
          aria-label="Close"
          data-action="close"
          data-test-id="button-close"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0; cursor: pointer; font-size: 16px; line-height: 1; padding: 15px; position: absolute; right: 0px; top: 0px;"
          title="Close"
          type="button"
        >
          <svg
            height="14px"
            preserveAspectRatio="xMidYMid"
            version="1.1"
            viewBox="0 0 18 18"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
                fill="#333"
              />
            </g>
          </svg>
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Joyride > Controlled > should have rendered STEP 5 Tooltip 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="right"
  data-popper-reference-hidden=""
  id="react-joyride-step-4"
  style="z-index: 200; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(20px, 0px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 200; padding: 0px 0px 0px 16px;"
  >
    <div
      class="__floater__body"
    >
      <div
        aria-label="Our Users"
        aria-modal="true"
        class="react-joyride__tooltip"
        role="alertdialog"
        style="background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; padding: 15px; position: relative; width: 380px;"
      >
        <div
          style="line-height: 1.4; text-align: center;"
        >
          <h1
            aria-label="Our Users"
            style="font-size: 18px; margin: 0px;"
          >
            Our Users
          </h1>
          <div
            style="padding: 20px 10px;"
          >
            <div>
              <svg
                aria-hidden="true"
                height="96px"
                preserveAspectRatio="xMidYMid"
                viewBox="0 0 96 96"
                width="96px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M83.2922435,72.3864207 C69.5357835,69.2103145 56.7313553,66.4262214 62.9315626,54.7138297 C81.812194,19.0646376 67.93573,0 48.0030634,0 C27.6743835,0 14.1459311,19.796662 33.0745641,54.7138297 C39.4627778,66.4942237 26.1743334,69.2783168 12.7138832,72.3864207 C0.421472164,75.2265157 -0.0385432192,81.3307198 0.0014581185,92.0030767 L0.0174586536,96.0032105 L95.9806678,96.0032105 L95.9966684,92.1270809 C96.04467,81.3747213 95.628656,75.2385161 83.2922435,72.3864207 Z"
                    fill="#000000"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
        <div
          style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
        >
          <div
            style="flex: 1 1 0%;"
          >
            <button
              aria-label="Skip"
              aria-live="off"
              data-action="skip"
              data-test-id="button-skip"
              role="button"
              style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(51, 51, 51); cursor: pointer; font-size: 14px; line-height: 1; padding: 8px;"
              title="Skip"
              type="button"
            >
              Skip
            </button>
          </div>
          <button
            aria-label="Back"
            data-action="back"
            data-test-id="button-back"
            role="button"
            style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(255, 0, 68); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px; margin-left: auto; margin-right: 5px;"
            title="Back"
            type="button"
          >
            Back
          </button>
          <button
            aria-label="Next (Step 5 of 6)"
            data-action="primary"
            data-test-id="button-primary"
            role="button"
            style="background-color: rgb(255, 0, 68); border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px;"
            title="Next (Step 5 of 6)"
            type="button"
          >
            Next (Step 5 of 6)
          </button>
        </div>
        <button
          aria-label="Close"
          data-action="close"
          data-test-id="button-close"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0; cursor: pointer; font-size: 16px; line-height: 1; padding: 15px; position: absolute; right: 0px; top: 0px;"
          title="Close"
          type="button"
        >
          <svg
            height="14px"
            preserveAspectRatio="xMidYMid"
            version="1.1"
            viewBox="0 0 18 18"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
                fill="#333"
              />
            </g>
          </svg>
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; top: 0px; transform: translate(0px, 8px); left: 0px;"
      >
        <svg
          height="32"
          version="1.1"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="16,32 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Joyride > Controlled > should have rendered STEP 6 Tooltip 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="top"
  data-popper-reference-hidden=""
  id="react-joyride-step-5"
  style="z-index: 200; position: absolute; left: 0px; top: auto; margin: 0px; right: auto; bottom: 0px; transform: translate(0px, -20px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 200; padding: 0px 0px 16px;"
  >
    <div
      class="__floater__body"
    >
      <div
        aria-label="The awesome connections you have made"
        aria-modal="true"
        class="react-joyride__tooltip"
        role="alertdialog"
        style="background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; padding: 15px; position: relative; width: 380px;"
      >
        <div
          style="line-height: 1.4; text-align: center;"
        >
          <div
            style="padding: 20px 10px;"
          >
            The awesome connections you have made
          </div>
        </div>
        <div
          style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
        >
          <div
            style="flex: 1 1 0%;"
          />
          <button
            aria-label="Back"
            data-action="back"
            data-test-id="button-back"
            role="button"
            style="background-color: transparent; border: 0px; border-radius: 0; color: rgb(255, 0, 68); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px; margin-left: auto; margin-right: 5px;"
            title="Back"
            type="button"
          >
            Back
          </button>
          <button
            aria-label="Last"
            data-action="primary"
            data-test-id="button-primary"
            role="button"
            style="background-color: rgb(255, 0, 68); border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; padding: 8px;"
            title="Last"
            type="button"
          >
            Last
          </button>
        </div>
        <button
          aria-label="Close"
          data-action="close"
          data-test-id="button-close"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0; cursor: pointer; font-size: 16px; line-height: 1; padding: 15px; position: absolute; right: 0px; top: 0px;"
          title="Close"
          type="button"
        >
          <svg
            height="14px"
            preserveAspectRatio="xMidYMid"
            version="1.1"
            viewBox="0 0 18 18"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
                fill="#333"
              />
            </g>
          </svg>
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); bottom: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="0,0 16,16 32,0"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Joyride > Controlled > should start the tour > overlay 1`] = `
<div
  class="react-joyride__overlay"
  data-test-id="overlay"
  role="presentation"
  style="cursor: default; height: 50px; pointer-events: none; bottom: 0px; left: 0px; overflow: hidden; position: absolute; right: 0px; top: 0px; z-index: 10000; background-color: rgba(0, 0, 0, 0.5); mix-blend-mode: hard-light;"
>
  <div
    class="react-joyride__spotlight"
    data-test-id="spotlight"
    style="background-color: gray; border-radius: 4px; height: 20px; left: -10px; opacity: 1; pointer-events: none; position: absolute; top: -10px; transition: opacity 0.2s; width: 20px;"
  />
</div>
`;

exports[`Joyride > Controlled > should start the tour > tooltip 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="react-joyride-step-0"
  style="z-index: 10100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 20px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 10100; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        aria-label="Menu"
        aria-modal="true"
        class="react-joyride__tooltip"
        role="alertdialog"
        style="background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; padding: 15px; position: relative; width: 380px;"
      >
        <div
          style="line-height: 1.4; text-align: center;"
        >
          <h1
            aria-label="Menu"
            style="font-size: 18px; margin: 0px;"
          >
            Menu
          </h1>
          <div
            style="padding: 20px 10px;"
          >
            <div>
              You can interact with your own components through the spotlight.
              <br />
              Click the menu above!
            </div>
          </div>
        </div>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Joyride > Controlled > should start the tour 1`] = `
<div
  class="controlled-container"
  data-test-id="controlled"
>
  <div
    class="controlled-sidebar"
    data-test-id="sidebar"
  >
    <div>
      <button
        class="controlled-sidebar-button"
        type="button"
      >
        <img
          alt="close"
          src="https://files.gilbarbara.dev/icons/close.svg"
        />
      </button>
    </div>
    <p
      class="controlled-sidebar-item"
    >
      Home
    </p>
    <p
      class="controlled-sidebar-item"
    >
      Controlled
    </p>
    <p
      class="controlled-sidebar-item"
    >
      Custom
    </p>
    <p
      class="controlled-sidebar-item"
    >
      Modal
    </p>
    <p
      class="controlled-sidebar-item"
    >
      Scroll
    </p>
  </div>
  <button
    class="controlled-menu"
    data-test-id="menu"
    type="button"
  >
    <img
      alt="menu"
      src="https://cdn.jsdelivr.net/npm/css.gg/icons/svg/menu.svg"
    />
  </button>
  <h1
    class="controlled-heading"
  >
    DASHBOARD
  </h1>
  <div
    class="controlled-sections"
  >
    <div
      class="controlled-section calendar"
    >
      CALENDAR
    </div>
    <div
      class="controlled-section growth"
    >
      GROWTH
    </div>
    <div
      class="controlled-section users"
    >
      USERS
    </div>
    <div
      class="controlled-section connections"
    >
      CONNECTIONS
    </div>
  </div>
</div>
`;
